Smaller font-Size to prevent overflow

--- a/src/Components/Stationary/Ticket/Ticket.css
+++ b/src/Components/Stationary/Ticket/Ticket.css
@@ -130,7 +130,7 @@
 }
 
 .ticket_ueberschrift {
-    font-size: 22px;
+    font-size: 17px;
     display: flex;
     align-items: center;
 }
